# german-tech-job-analyzer

./: README.md  pyproject.toml
src/german_tech_job_analyzer/: __main__.py
src/german_tech_job_analyzer/database/: create_tables.py  db.py  insert_sample_data.py  read_jobs.py
